added all files

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,13 @@
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Usage: What's on</h1>
-        <p>- (channelname) - playing on (channelname) - playing on (channelname) now</p>
-      <p>
-          A and E
-      
+      <h1>Example Phrases:</h1>
+        <p style="color:green">Alexa ask what's on CNN today : Alexa ask What's on (Channel). tells you show schedule for today</p>
+        <p style="color:red">Alexa ask what's on Animal planet now : Alexa ask What's on (Channel) now . tells you shows running now</p> 
+    <h2>List of channels:</h2>
+        <p>
+          A and E</p>
+   
 <p>ABC</p>
 <p>AHC</p>
 <p>Animal Planet</p>
