added all files

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 <p>CBS sports network</p>
 <p>CBSSN</p>
 <p>CNBC</p>
+<p>CNN</p>
 <p>Cartoon Network</p>
 <p>Comedy central</p>
 <p>Cooking Channel</p>
